{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 121,
  "lineage": "936464e8-497e-1088-0556-c2b4ebfd403f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dedf8e86fae0a5d8",
            "arn": "arn:aws:ec2:ca-central-1:233889133251:instance/i-06be2ba2142a0ce1f",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-06be2ba2142a0ce1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Winkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "T0fjl9X4LxPmLuXGYE+hHhZrZYsGf3FEjIMwr1ysK2ZCMK4JZgc+TfD36p/PKIERGHTEUyisWrLBbA2uv11n0OgvSFgCuOkSwr5v9E+1MUHAnKO5kTRX+qdx4r2mEuC8N8vWq6ssEvnjxW2xVqYCcfdkQ8hD9h0bU4F3jo+Dk5X3Zfyb3b/YHlsaXKKZk+oJ3N3nslHW3mFGaCRyB2FsYvYgMh1mPmqCNyHHFQceMFZ82FSDA6qQVoBIbW4lrCAPV+uhL3Z+F0ljC/B1anzSKzUR6cmfrc4EcrCV+JCY4+evkjBcVOIlk/czEgD5dh7D4ky523WlX8PGvtIVpO68i0ZCTU/KrkAw7Mfjt/j6Qe/ob35H2BeL+yeHtskVTO5rGEQrutXzxJiqLLWQ9o1xlPIBkeeEPESK3qOHd/AauwmRkCZ+vv5RUvblgAsFDt5xHmUoWQ+Tn1/lw3VytBjGT9 [...]
            "primary_network_interface_id": "eni-0655c9826bafe3523",
            "private_dns": "ip-10-0-0-53.ca-central-1.compute.internal",
            "private_ip": "10.0.0.53",
            "public_dns": "ec2-35-183-37-2.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.37.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0159c5d3e6b5b5750",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-02b8305ffedaa9fa3",
            "tags": {
              "Name": "Win-Ansible"
            },
            "tags_all": {
              "Name": "Win-Ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00687f1dd6b0a321a"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-windows-sg",
            "aws_subnet.subnetI",
            "data.aws_ami.windows-2019",
            "data.template_file.windows-userdata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:233889133251:internet-gateway/igw-060a2259a01a74a7d",
            "id": "igw-060a2259a01a74a7d",
            "owner_id": "233889133251",
            "vpc_id": "vpc-03b97d139589c697a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:233889133251:route-table/rtb-080971c5c6ae3443c",
            "id": "rtb-080971c5c6ae3443c",
            "owner_id": "233889133251",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060a2259a01a74a7d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route table win"
            },
            "tags_all": {
              "Name": "route table win"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b97d139589c697a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c0d9b7ecb6a170d",
            "route_table_id": "rtb-080971c5c6ae3443c",
            "subnet_id": "subnet-02b8305ffedaa9fa3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.subnetI",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-windows-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:233889133251:security-group/sg-00687f1dd6b0a321a",
            "description": "Allow incoming connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00687f1dd6b0a321a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming RDP connections",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "windows-sg",
            "name_prefix": "",
            "owner_id": "233889133251",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "windows-sg"
            },
            "tags_all": {
              "Name": "windows-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b97d139589c697a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:233889133251:subnet/subnet-02b8305ffedaa9fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b8305ffedaa9fa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233889133251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03b97d139589c697a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:233889133251:vpc/vpc-03b97d139589c697a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0beca7f8ba7e85ce2",
            "default_route_table_id": "rtb-000368200d4351a65",
            "default_security_group_id": "sg-0c427e964f18baf79",
            "dhcp_options_id": "dopt-0d88e1934430fa37b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03b97d139589c697a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000368200d4351a65",
            "owner_id": "233889133251"
          }
        }
      ]
    }
  ]
}